<resources>
    <string name="app_name">Form Task</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="todo">TODO</string>

    <string name="app_continue">Continue</string>
    <string name="addForm">add form</string>
    <string name="address">Address</string>
    <string name="postcode">Postal Code</string>
    <string name="enter_card_s_billing_address">Enter card\'s billing address:</string>
    <string name="town_city">Town / City</string>
    <string name="country">Country</string>
    <string name="postal">postal</string>
    <string name="city">city</string>
</resources>